# collaborative-filtering

./: .gitignore  README.md  datamodules.py  experiment.py  main.py  model.py  preprocess.py  pyproject.toml  scratch.py
.devcontainer/: devcontainer.json
collab/movielens/: README.md  benchmark_utils.py  experiment.py  params.py
data/: README
